# src/modules/accounts/dtos/alunos/ICreateAlunosDTO.ts
@@ -1,15 +1,7 @@
-type Turno = "vespertino" | "integral" | "noturno" | "matutino";
-type Situacao = "matriculado" | "concludente";
-
 export interface ICreateAlunosDTO {
-  matricula: string;
-  name: string;
-  sexo: string;
-  turmaId?: string;
-  cursoId?: string;
   userId: string;
-  createdAt?: Date;
-  updatedAt?: Date;
-  turno?: Turno;
-  situacao?: Situacao;
+  cpf: string;
+  nome: string;
+  sexo: string;
+  cidade?: string;
 }
