# src/modules/accounts/infra/entities/Aluno.ts
@@ -1,20 +1,9 @@
-import { Curso, Turma } from "@prisma/client";
-
-type Situacao = "matriculado" | "concludente";
-type Turno = "vespertino" | "integral" | "noturno" | "matutino";
-
 export class Aluno {
-  matricula: string;
-  name: string;
+  cpf: string;
+  nome: string;
   sexo: string;
   createdAt: Date;
   updatedAt: Date;
-  situacao: Situacao;
-  turno: Turno;
+  cidade: string;
   userId: string;
-  turmaId?: string;
-  cursoId?: string;
-  cidadeId?: string;
-  turma?: Turma;
-  curso?: Curso;
 }
