# src/modules/accounts/types/index.ts
@@ -1,7 +1,19 @@
-import { Aluno, Funcionario, Servidor, User } from "@prisma/client";
+import { Funcionario, Servidor, Situacao } from "@prisma/client";
+
+import { Aluno } from "../infra/entities/Aluno";
+import { User } from "../infra/entities/User";
 
 export interface IUser extends User {
   aluno?: Aluno;
   funcionario?: Funcionario;
   servidor?: Servidor;
 }
+
+export type SituacaoMatricula = Situacao;
+
+export type Turno =
+  | "vespertino"
+  | "integral"
+  | "noturno"
+  | "matutino"
+  | "diurno";
